compose file name

--- a/example.env
+++ b/example.env
@@ -2,7 +2,7 @@
 # ENVIRONMENT SETUP
 ################################################################################
 
-COMPOSE_PROJECT_NAME="traefik"
+COMPOSE_PROJECT_NAME="resume"
 DOCKER_DIRECTORY="/home/juftin/docker/resume"
 UNIVERSAL_RESTART_POLICY="always"
 DOMAIN_NAME="juft.in"
